--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-adgjasn
+<!DOCTYPE html>
+<head>
+    <title>Locker</title>
+    <body>
+        <img src="images\locker-logomid.png">
+    </body>
+</head>
