--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin Sans">
     <title>Locker</title>
+    <link rel="icon" type="image/x-icon" href="/images/locker-icon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <body>
-        <img src="images\locker-logomid.png">
+        <div class="center"><img src="images\locker-logomid.png" width="320px"></div>
+        <div class="contentstrip-main"><p>Unturned plugin to host info management and cross-plugin storage sharing.</p></div>
+        <div class="contentstrip-sub"><p>Locker is a Rocket (LDM) Plugin that is very simple in premise but enables very smooth compatibility between plugins using Locker API and easy server storage management, especially for those server owners that own a network of servers! Locker makes it easy to store data, retrieve that data with extremely simple functions that store text, numbers, locations without a need to convert and still run async saves to your Folder or MySql <b>Database!</b></p></div>
+        <div class="contentstrip-main"><p><b>Installation</b></p></div>
+        <div class="contentstrip-sub"><p><i class="fa fa-download" style="font-size:32px"></i> Download Latest</p></div>
     </body>
 </head>
