--- a/installation.html
+++ b/installation.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <body>
         <div class="contentstrip-transparent"><img src="images\locker-logomid.png" width="320px"></div>
-        <div class="contentstrip-main"><p>Unturned plugin to host info management and cross-plugin storage sharing.</p></div>
-        <div class="contentstrip-sub"><p>Locker is a Rocket (LDM) Plugin that is very simple in premise but enables very smooth compatibility between plugins using Locker API and easy server storage management, especially for those server owners that own a network of servers! Locker makes it easy to store data, retrieve that data with extremely simple functions that store text, numbers, locations without a need to convert and still run async saves to your server's file system or MySql Database!</p></div>
         <div class="contentstrip-main"><p><a href="installation.html" class="navbar-button"><b>Installation</b></a><a href="https://github.com/spigbop/Locker/releases" class="navbar-button"><b>Documentation</b></a><a href="https://github.com/spigbop/Locker" class="navbar-button"><b>View on Github</b></a></p></div>
         <div class="contentstrip-sub"><p>1. Your server first needs <b>RocketMod</b> go to your Unturned directory and head on to <b>Extras</b> to install or if you are using <b>OpenMod</b> make sure Rocket-bridge is installed.</p></div>
         <div class="contentstrip-sub"><p>2. Download the latest Locker version from the links below.</p></div>
         <div class="contentstrip-sub"><p>3. Grab everything inside <b>Locker.zip</b> and paste it inside your server's <b>Rocket</b> folder.</p></div>
         <div class="contentstrip-main"><p><a href="https://github.com/spigbop/Locker/releases" class="navbar-button"><i class="fa fa-download"></i> <b>Download Latest</b></a></p></div>
+        <div class="contentstrip-main" style="padding-top: -20px;"><p><a href="https://github.com/spigbop/Locker/releases" class="navbar-button-small">View older downloads</a></p></div>
     </body>
 </head>
